2005-10-20 Tom MacSween <macsweent@sympatico.ca>

	* Source/win32/: Fixed a compile error when debug flags were
	activated. Removed detailed documation from MS. Read and
	write correctly from defaults.

2005-09-19  Adam Fedor  <fedor@gnu.org>

	* Version 0.10.1

	* configure.ac: Make art the default graphics module.

2005-09-14  Tom MacSween <macsweent@sympatico.ca>

	* Restructuring of the windows server to handle various
	window and toolbar issues (See Source/win32/RELEASE_NOTES for
	more info).
	* Headers/win32/WIN32Server.h: Added ivars and flags and methods.
	* Headers/winlib/WIN32GState.h: Added method to avoid confliting
	types with superclass.
	* Source/win32/GNUmakefile: Add new files.
	* w32_debug.m, w32_activate.m, w32_create.m, w32_general.m,
	w32_movesize.m, w32_text_focus.m, w32_windowdisplay.m,
	GSDisplayServer_details.m: New files.
	* Source/win32/WIN32Server.m: Large changes. Merged with 
	WIN32ServerEvent. Lots of documentation.

	* Source/winlib/WIN32GState.m: Variable name changes to 
	avoid shadowing.

2005-08-28  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/cairo/CairoSurface.h,
	* Source/cairo/CairoSurface.m,
	* Source/cairo/XGCairoGlitzSurface.m,
	* Source/cairo/XGCairoSurface.m,
	* Source/cairo/XGCairoXImageSurface.m,
	* Source/cairo/CairoGState.m (-GSSetDevice:::):
	Rewrote the device handling to work for resized windows.
	* Headers/cairo/CairoFontInfo.h,
	* Source/cairo/CairoFontInfo.m (-drawGlyphs:length:on:, -setupAttributes),
	* Source/cairo/CairoGState.m (-GSShowGlyphs::):
	Moved adjustment of font size and positioning to CairoFontInfo.
	* Source/cairo/CairoContext.m:
	Clean up.

2005-08-20  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-DPSImage::::::::):
	For the ARGB32 case sort the colour fields in the bitmap correctly.
	
2005-08-20  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFaceInfo.m (-fontFace): Use
	_cairo_toy_font_face_create, as Cairo did rename this function.